# Octree

./: CMakeLists.txt  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  OctreePointCloud.vcxproj  OctreePointCloud.vcxproj.filters  PointCloud.cpp  PointCloud.h  README.md  example_main.cpp
Header/: Commons.h  Octree.h  OctreeNode.h  PointCloud.h  VertexContainer.h
PointClouds/: bunny.ply  cube.ply  dragon.ply  sphere.ply  vase.ply
Source/: Octree.cpp  OctreeNode.cpp  PointCloud.cpp  VertexContainer.cpp
x64/Debug/: OctreePointCloud.exe.recipe  OctreePointCloud.ilk  vc143.idb
x64/Debug/OctreePointCloud.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OctreePointCloud.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
